--- a/index.html
+++ b/index.html
@@ -464,6 +464,18 @@
         <h2>Abgeschlossene Arbeiten</h2>
         <ul data-js-finished-works class="work-overview is-full-width"></ul>
       </section>
+
+      <section class="section with-bg-dark">
+        <h2>Thema vorschlagen</h2>
+        <p>Haben Sie einen Themenwunsch oder -vorschlag? Ich suche vor allem nach Themen, die Interfaces im industriellen und musealen Kontext behandeln. Keine reinen Tech-Themen – Interfaces im Fokus!</p>
+        <form>
+          <input type="text" name="Name" placeholder="Name">
+          <input type="email" name="E-Mail Adresse" placeholder="E-Mail Adresse">
+          <input type="text" name="Thema" placeholder="Thema">
+          <textarea name="Erklärung zum Thema" placeholder="Erklärung zum Thema"></textarea>
+          <button class="simple-button" type="submit">abschicken</button>
+        </form>
+      </section>
     </main>
     <footer class="footer">
       <div>
