--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <!-- and it's easy to individually load additional languages -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/go.min.js"></script>
     <script src="/assets/js/main.js" type="module"></script>
+    <script defer src="/assets/js/works.js"></script>
   </head>
 
   <body class="default">
@@ -462,7 +463,10 @@
 
       <section class="section with-bg-gray">
         <h2>Abgeschlossene Arbeiten</h2>
-        <ul data-js-finished-works class="work-overview is-full-width"></ul>
+        <ul data-js-finished-works class="work-overview is-full-width">
+          
+        </ul>
+        <button class="simple-button">Weitere Arbeiten anzeigen</button>
       </section>
 
       <section class="section with-bg-dark">
