--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       </div>
 
       <section class="section has-seperator">
-        <h2>Aktuelle Themenvorschläge</h2>
+        <h2><span class="icon icofont-rocket md-dark"></span>Aktuelle Themenvorschläge</h2>
 
         <ul class="topic-overview is-full-width">
           <li class="topic-item">
@@ -226,7 +226,7 @@
       </section>
 
       <section class="section" style="margin-top: 3em">
-        <h2>Neue Spielregeln ab dem Sommersemester 2024</h2>
+        <h2><span class="icon icofont-direction-sign md-dark"></span>Neue Spielregeln ab dem Sommersemester 2024</h2>
 
         <p>
           Mit dem Sommersemester habe ich die Ausrichtung der Themen und
@@ -306,7 +306,7 @@
       </section>
 
       <section class="section has-seperator">
-        <h2>Ablauf</h2>
+        <h2><span class="icon icofont-chart-flow-2 md-dark"></span>Ablauf</h2>
         <details>
           <summary id="vor-der-arbeit">Vor der Arbeit</summary>
           <div class="details-content">
@@ -448,7 +448,7 @@
       </section>
 
       <section class="section has-seperator">
-        <h2>Artefakte und Bewertung</h2>
+        <h2><span class="icon icofont-code md-dark"></span>Artefakte und Bewertung</h2>
 
         <p>
           Hier finden Sie die
@@ -462,7 +462,7 @@
       </section>
 
       <section class="section with-bg-gray">
-        <h2>Abgeschlossene Arbeiten</h2>
+        <h2><span class="icon icofont-dart md-dark"></span>Abgeschlossene Arbeiten</h2>
         <ul data-js-finished-works class="work-overview is-full-width">
           
         </ul>
@@ -470,7 +470,7 @@
       </section>
 
       <section class="section with-bg-dark">
-        <h2>Thema vorschlagen</h2>
+        <h2><span class="icon icofont-magic md-dark"></span>Thema vorschlagen</h2>
         <p>Haben Sie einen Themenwunsch oder -vorschlag? Ich suche vor allem nach Themen, die Interfaces im industriellen und musealen Kontext behandeln. Keine reinen Tech-Themen – Interfaces im Fokus!</p>
         <form>
           <input type="text" name="Name" placeholder="Name">
