--- a/works/n-pola-can-i-cai.html
+++ b/works/n-pola-can-i-cai.html
@@ -39,11 +39,37 @@
   <!-- and it's easy to individually load additional languages -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/go.min.js"></script>
   <script src="/assets/js/main.js" type="module"></script>
+  <link rel="stylesheet" href="/assets/styles/components/work-overview.css">
 
 </head>
 
-<body class="work-result">
-
+<body>
+  <header class="work-header">
+    <div class="home-button">
+      <a href="/"><i class="icofont-book-alt is-large"></i></a>
+    </div>
+    <h1 class="title">Praxisprojekte & Abschlussarbeiten</h1>
+    <h2 class="subtitle">
+      bei <a href="https://christiannoss.de">Christian Noss</a>
+    </h2>
+  </header>
+  <main class="work-result">
+    <section>
+      <img src="/assets/uploads/polarek-nils-ba-ss24-bilddokumentation-13-s.webp" alt="Coverbild der Arbeit Can I CAI?">
+      <h3>Can I CAI? Entwicklung einer Webapp zur Überprüfung von Veröffentlichungsprozessen auf Kompatibilität mit aufkommenden Standards der Content Authenticity Initiative zur Auszeichnung von authentischen Medien im Web.</h3>
+      <h4>Bachelorarbeit von Nils Polarek</h4>
+    </section>
+    <section class="info-section">
+    <p><strong>Keywords:</strong> Content Authenticity Initiative (CAl), Generative kunstliche Incelligenz, Authentizital</p>
+    <p><strong>Datum:</strong> 23.07.2024</p>
+    <p><strong>PDF:</strong> <a href="#">Download</a></p>
+    <p><strong>Website zur Arbeit:</strong> <a href="https://www.n-pola-can-i-cai.de">https://www.n-pola-can-i-cai.de</a></p>
+    <p><strong>Repository zur Arbeit:</strong> <a href="https://github.com/n-pola/can-i-cai">https://github.com/n-pola/can-i-cai</a></p>
+    </section>
+    <section>
+      <p class="description">Durch rapide Fortschritte im Bereich der generativen künstlichen Intelligenz wird es zunehmend schwerer für Nutzer:innen echte Inhalte von solchen zu unterscheiden, die generiert oder manipuliert wurden. Dies kann zur bewussten oder unabsichtlichen Verbreitung von Falschinformationen führen, welche Nutzer in ihrer Wahrnehmung der Realität beeinflussen können. Aus diesem Grund wurde die Content Authenticity Initiative (CAI) gegründet, welche in Zusammenarbeit mit der Coalition for Content Provenance and Authenticity (C2PA) an Open-Source-Standards und Werkzeugen zur Auszeichnung und Überprüfung von beweisbar authentischen Inhalten im Web arbeitet. Diese Standards und deren Problemfeld gewinnen zunehmend an Bedeutung, sodass sie von Kameraherstellern wie Leica und Sony, Softwareherstellern wie Adobe und Social-Media-Plattformen wie TikTok bereits integriert werden. Damit es mehr authentische Inhalte im Web geben kann, müssen diese Standards von Medienschaffenden adaptiert werden. Dies gestaltet sich zum aktuellen Zeitpunkt allerdings noch als herausfordernd, da die Verbreitung der Standards zwar zunimmt, aber noch in einer frühen Phase ist, sodass nur wenige Geräte und Programme kompatibel sind und Informationen zur Kompatibilität von Hard- und Software nicht zentral verfügbar sind.&lt;/p&gt;&lt;p&gt;Diese Arbeit beschäftigt sich mit der Gestaltung und Umsetzung einer Open-Source-Webapp, welche es Medienschaffenden ermöglicht, ihren individuellen Veröffentlichungsprozess hinsichtlich der Kompatibilität mit den Standards der CAI zu überprüfen. In dieser Webapp kann ein solcher Prozess interaktiv aus verschiedenen Bestandteilen zusammengestellt werden und es wird aufgezeigt, welche Bestandteile kompatibel sind und welche die Kette von aufeinander aufbauenden Metadaten unterbrechen würden.&lt;/p&gt;&lt;p&gt;Hierbei liegt neben der Gestaltung und Umsetzung der Anwendung ein besonderer Fokus auf der Erstellung eines Systems zur Pflege der benötigten Datenbasis im Kontext einer Open-Source-Anwendung, sodass andere Beteiligte diese erweitern und bearbeiten können, der Erstellung eines interaktiven Prozess-Editors und der Adaption dieses in eine mobile Version mit Integration von Touchinteraktionen und -gesten. Das Ergebnis dieser Arbeit ist eine für Desktop- und Mobilgeräte optimierte Webapp, welche unter https://www.can-i-cai.de erreichbar ist.</p>
+    </section>
+  </main>
   <footer class="footer">
     <div>
       <p id="kontakt">
